--- a/VAE-TF.ipynb
+++ b/VAE-TF.ipynb
@@ -268,13 +268,12 @@
     }
    ],
    "source": [
-    "network_architecture = \\\n",
-    "    dict(n_hidden_enc_1 = 500, \n",
-    "         n_hidden_enc_2 = 500, \n",
-    "         n_hidden_dec_1 = 500, \n",
-    "         n_hidden_dec_2 = 500, \n",
-    "         n_input = 784, \n",
-    "         n_z = 20)  \n",
+    "network_architecture = dict(n_hidden_enc_1 = 500, \n",
+    "                             n_hidden_enc_2 = 500, \n",
+    "                             n_hidden_dec_1 = 500, \n",
+    "                             n_hidden_dec_2 = 500, \n",
+    "                             n_input = 784, \n",
+    "                             n_z = 20)  \n",
     "\n",
     "vae = train_mnist(network_architecture, n_epoch = 15)"
    ]
@@ -362,13 +361,12 @@
     }
    ],
    "source": [
-    "network_architecture = \\\n",
-    "    dict(n_hidden_enc_1=500, # 1st layer encoder neurons\n",
-    "         n_hidden_enc_2=500, # 2nd layer encoder neurons\n",
-    "         n_hidden_dec_1=500, # 1st layer decoder neurons\n",
-    "         n_hidden_dec_2=500, # 2nd layer decoder neurons\n",
-    "         n_input=784, # MNIST data input (img shape: 28*28)\n",
-    "         n_z=2)  # dimensionality of latent space\n",
+    "network_architecture = dict(n_hidden_enc_1=500, \n",
+    "                             n_hidden_enc_2=500, \n",
+    "                             n_hidden_dec_1=500, \n",
+    "                             n_hidden_dec_2=500, \n",
+    "                             n_input=784, \n",
+    "                             n_z=2) \n",
     "\n",
     "vae_2d = train_mnist(network_architecture, n_epoch = 10)"
    ]
@@ -407,6 +405,20 @@
     "Xi, Yi = np.meshgrid(x_values, y_values)\n",
     "plt.imshow(canvas, origin=\"upper\", cmap=\"gray\")\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiments"
    ]
   },
   {
