--- a/VAE-TF.ipynb
+++ b/VAE-TF.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,15 +171,16 @@
     "        Return loss of mini-batch.\n",
     "        \"\"\"\n",
     "        \n",
-    "        opt, loss = self.sess.run((self.optimizer, self.loss), feed_dict={self.x: X})\n",
+    "        opt, loss = self.sess.run((self.optimizer, self.loss), \n",
+    "                                                feed_dict={self.x: X})\n",
     "        return loss\n",
     "    \n",
-    "    #def transform(self, X):\n",
-    "    #    \"\"\"\n",
-    "    #    Transform data by mapping it into the latent space.\n",
-    "    #    \"\"\"\n",
-    "    #    # Note: This maps to mean of distribution, we could alternatively sample from Gaussian distribution\n",
-    "    #    return self.sess.run(self.mu, feed_dict={self.x: X})\n",
+    "    def transform(self, X):\n",
+    "        \"\"\"\n",
+    "        Transform data by mapping it into the latent space.\n",
+    "        \"\"\"\n",
+    "        # Note: This maps to mean of distribution, we could alternatively sample from Gaussian distribution\n",
+    "        return self.sess.run((self.mu, self.logvar), feed_dict={self.x: X})\n",
     "    \n",
     "    def generate(self, mu = None):\n",
     "        \"\"\" \n",
@@ -197,7 +198,8 @@
     "        \"\"\"\n",
     "        \n",
     "        return self.sess.run(self.recon_x, feed_dict={self.x: X})\n",
-    "    "
+    "    \n",
+    "        "
    ]
   },
   {
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,42 +230,33 @@
     "    for epoch in range(n_epoch):\n",
     "        \n",
     "        avg_loss = 0.\n",
-    "        n_batch = int(train_size / batch_size) # FIX IT!\n",
+    "        n_batch = int(train_size / batch_size) \n",
     "\n",
     "        for idx in range(n_batch):\n",
     "            train_batch = train_data[idx * batch_size:idx * batch_size + batch_size]\n",
     "            loss = vae.train(train_batch)\n",
     "            avg_loss += loss / train_size * batch_size\n",
     "\n",
-    "        print(\"Epoch:\", '%04d' % (epoch+1), \"Loss =\", \"{:.5f}\".format(avg_loss))\n",
+    "        print(\"Epoch:\", \"%d/%d\" % (epoch+1, n_epoch), \n",
+    "              \"Loss =\", \"{:.4f}\".format(avg_loss))\n",
     "        \n",
     "    return vae"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 Loss = 158.58345\n",
-      "Epoch: 0002 Loss = 119.48819\n",
-      "Epoch: 0003 Loss = 112.97152\n",
-      "Epoch: 0004 Loss = 110.13927\n",
-      "Epoch: 0005 Loss = 108.36504\n",
-      "Epoch: 0006 Loss = 107.00726\n",
-      "Epoch: 0007 Loss = 106.07098\n",
-      "Epoch: 0008 Loss = 105.22374\n",
-      "Epoch: 0009 Loss = 104.56546\n",
-      "Epoch: 0010 Loss = 103.96691\n",
-      "Epoch: 0011 Loss = 103.52338\n",
-      "Epoch: 0012 Loss = 103.00054\n",
-      "Epoch: 0013 Loss = 102.74282\n",
-      "Epoch: 0014 Loss = 102.28505\n",
-      "Epoch: 0015 Loss = 101.96251\n"
+      "Epoch: 1/5 Loss = 244.7730\n",
+      "Epoch: 2/5 Loss = 185.5693\n",
+      "Epoch: 3/5 Loss = 159.4395\n",
+      "Epoch: 4/5 Loss = 140.9813\n",
+      "Epoch: 5/5 Loss = 130.2693\n"
      ]
     }
    ],
@@ -275,7 +268,7 @@
     "                             n_input = 784, \n",
     "                             n_z = 20)  \n",
     "\n",
-    "vae = train_mnist(network_architecture, n_epoch = 15)"
+    "vae = train_mnist(network_architecture, n_epoch = 5)"
    ]
   },
   {
@@ -418,7 +411,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experiments"
+    "### Evaluation\n",
+    "Consider metrics for generative models: reconstruction error, marginal log-likelihood (negative ELBO)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BCE(x, y):\n",
+    "    \"\"\"\n",
+    "    Calculate binary cross entropy loss for reconstruction loss in the ELBO.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    loss = np.sum(-y * np.log(x + 10e-8) - (1 - y) * np.log(1 - x + 10e-8))\n",
+    "\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = mnist.train_images()\n",
+    "x_sample = (images.reshape((60000, 784)) / 255)[:1000,]\n",
+    "recon_x = vae.reconstruct(x_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(X, recon_X):\n",
+    "        \"\"\"\n",
+    "        Evaluate the accuracy of the model with reconstruction error and marginal log-likelihood.\n",
+    "        \"\"\"\n",
+    "        rec_loss = BCE(recon_X, X) / len(X)\n",
+    "        # Marginal log-likelihood of data = - ELBO\n",
+    "        marg_likelihood = - vae.train(X)\n",
+    "        \n",
+    "        return rec_loss, marg_likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(106.49117566196126, -124.59328)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(x_sample, recon_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparative analysis\n",
+    "Compared to 2 generative models for images:\n",
+    "    - GAN: https://pypi.org/project/pygan/\n",
+    "    - Wake-sleep: https://github.com/jackklys/wake-sleep-modifications/tree/master/datasets"
    ]
   },
   {
