--- a/demo/vae_hcp_tensorflow_demo.ipynb
+++ b/demo/vae_hcp_tensorflow_demo.ipynb
@@ -7,15 +7,30 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "#import tensorflow as tf\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_eager_execution()\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
+    "# To load mnist data\n",
+    "import mnist\n",
     "\n",
-    "# Load MNIST data\n",
-    "import mnist"
+    "# To load and process HCP data\n",
+    "from scipy.io import loadmat\n",
+    "from sklearn.preprocessing import normalize\n",
+    "\n",
+    "# For visualization\n",
+    "from sklearn.decomposition import PCA\n",
+    "from mpl_toolkits.mplot3d import Axes3D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VAE Model Definition"
    ]
   },
   {
@@ -36,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +199,6 @@
     "        # Note: This maps to mean of distribution, we could alternatively sample from Gaussian distribution\n",
     "        return self.sess.run((self.mu, self.logvar), feed_dict={self.x: X})\n",
     "    \n",
-    "    def transform1d(self, X):\n",
-    "        \"\"\"\n",
-    "        Transform data by mapping it into the latent space.\n",
-    "        \"\"\"\n",
-    "        # Note: This maps to mean of distribution, we could alternatively sample from Gaussian distribution\n",
-    "        return self.sess.run(self.mu, feed_dict={self.x: X})\n",
-    "    \n",
     "    def generate(self, mu = None):\n",
     "        \"\"\" \n",
     "        Generate data by sampling from the latent space.        \n",
@@ -210,46 +218,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scipy.io import loadmat\n",
-    "from sklearn.preprocessing import normalize"
+    "### Load HCP Data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dat_mat = loadmat('./vae/data/HCP_subcortical_CMData_desikan.mat')\n",
-    "tensor = dat_mat['loaded_tensor_sub']\n",
-    "network_ids = dat_mat['all_id'].reshape(-1)"
+    "Load brain connectome networks:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#offset = 100 \n",
-    "\n",
-    "net_data = []\n",
-    "for i in range(tensor.shape[3]):\n",
-    "    ith = np.float32(tensor[:,:,0,i] + np.transpose(tensor[:,:,0,i])) # [:,:,0,:] - network data\n",
-    "    #ith = ith/offset\n",
-    "    ith = ith[18:86, 18:86]\n",
-    "    ith = ith.flatten()\n",
-    "    net_data.append(ith)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +245,32 @@
     }
    ],
    "source": [
+    "dat_mat = loadmat('../vae/data/HCP_subcortical_CMData_desikan.mat')\n",
+    "tensor = dat_mat['loaded_tensor_sub']\n",
+    "network_ids = dat_mat['all_id'].reshape(-1)\n",
+    "\n",
+    "net_data = []\n",
+    "for i in range(tensor.shape[3]):\n",
+    "    ith = np.float32(tensor[:,:,0,i] + np.transpose(tensor[:,:,0,i])) # [:,:,0,:] - network data\n",
+    "    ith = ith[18:86, 18:86]\n",
+    "    ith = ith.flatten()\n",
+    "    net_data.append(ith)\n",
+    "    \n",
     "brain_graphs = np.stack(net_data)\n",
-    "brain_graphs = normalize(brain_graphs) # Normalize data\n",
+    "brain_graphs = normalize(brain_graphs) # normalize data\n",
     "print(brain_graphs.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load human cognition traits:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,25 +282,23 @@
     }
    ],
    "source": [
-    "###Load phenotypes \n",
-    "#trait_mat = loadmat('./vae/data/HCP_Covariates.mat')\n",
-    "#trait_ids = trait_mat['allsubject_id']\n",
-    "# Match trait_ids with subject's network_ids\n",
-    "#trait_data = (trait_mat['cog_measure'])[:, np.isin(trait_ids, network_ids)]\n",
-    "phen_dat = loadmat('./vae/data/HCP_Covariates.mat')\n",
-    "phen_idx = [np.where(phen_dat['allsubject_id'] == ival)[0] for ival in dat_mat['all_id'].squeeze()]\n",
-    "trait_data = phen_dat['cog_measure'][4, phen_idx]\n",
-    "trait = trait_data[~np.isnan(trait_data)]\n",
-    "\n",
-    "#trait = trait_data[4,:]\n",
-    "# Replace nan with 0\n",
-    "#trait[np.isnan(trait)] = 0\n",
-    "#trait = (trait-np.mean(trait))/np.std(trait)\n",
-    "print(trait.shape)\n",
+    "# Load phenotypes \n",
     "# 4 - Oral Reading Recognition Test\n",
     "# 6 - Picture Vocabulary Test \n",
     "# 24 - Line Orientation: Total number correct\n",
-    "# 26 - Line Orientation: Total positions off for all trials "
+    "# 26 - Line Orientation: Total positions off for all trials \n",
+    "phen_dat = loadmat('../vae/data/HCP_Covariates.mat')\n",
+    "phen_idx = [np.where(phen_dat['allsubject_id'] == ival)[0] for ival in dat_mat['all_id'].squeeze()]\n",
+    "trait_data = phen_dat['cog_measure'][4, phen_idx]\n",
+    "trait = trait_data[~np.isnan(trait_data)]\n",
+    "print(trait.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applications"
    ]
   },
   {
@@ -353,6 +353,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PC scores of the latent z corresponding to different human cognition traits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 183,
    "metadata": {},
@@ -362,17 +369,6 @@
     "y_idx_100 = np.concatenate([y_idx[:100], y_idx[-100:]])\n",
     "label = np.concatenate([np.zeros(100), np.ones(100)])\n",
     "y_color = trait[y_idx_100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "#from sklearn.manifold import TSNE\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
@@ -394,7 +390,7 @@
     }
    ],
    "source": [
-    "X_trait4 = np.load('mu4.npy')\n",
+    "X_trait4 = np.load('../temp/mu4.npy')\n",
     "X_100 = X_trait4[y_idx_100, :]\n",
     "\n",
     "pca = PCA(n_components=3)\n",
@@ -442,7 +438,7 @@
     }
    ],
    "source": [
-    "X_trait6 = np.load('mu6.npy')\n",
+    "X_trait6 = np.load('../temp/mu6.npy')\n",
     "X_100 = X_trait6[y_idx_100, :]\n",
     "\n",
     "pca = PCA(n_components=3)\n",
@@ -490,7 +486,7 @@
     }
    ],
    "source": [
-    "X_trait24 = np.load('mu.npy')\n",
+    "X_trait24 = np.load('../temp/mu.npy')\n",
     "X_100 = X_trait24[y_idx_100, :]\n",
     "\n",
     "pca = PCA(n_components=3)\n",
